Made navbar taller and fixed spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,11 @@ html, body {
     font-weight: 500;
     box-sizing: border-box;
 }
+hr {
+    padding: 0;
+    margin-top: .5rem;
+    margin-bottom: 0;
+}
 .connect {
     display: flex;
     justify-content: space-between;
@@ -40,6 +45,7 @@ html, body {
 .navbar-brand img {
     width: 10rem;
     height: auto;
+    border: 1px solid red;
 }
 .slider .item {
     height: 400px;
